2000-01-11  Havoc Pennington  <hp@pobox.com>

	* gnome-messagebox.c (gnome_message_box_new): 
	Format title as "Error (Gnumeric)" rather than 
	"Error: Gnumeric"

2000-01-12  Martijn van Beers  <martijn@earthling.net>

        * gnome-gconf.[ch]: added get/set functions for
        Gnome(File|Icon|Pixmap)?Entry

2000-01-11  Jonathan Blandford  <jrb@redhat.com>

	* gnome-gconf.c (gnome_gconf_gnome_color_picker_get): added new
	function.  Home for food.

2000-01-11  Havoc Pennington  <hp@redhat.com>

	* gnome-messagebox.c (gnome_message_box_new): Use human readable
	name in the message box title.
	(gnome_message_box_set_default, gnome_message_box_set_modal): 
	Removed, now obsolete

2000-01-10  Havoc Pennington  <hp@redhat.com>

	* gnome-ditem-edit.c: Finish this up; it compiles; haven't tried
	it out.

2000-01-12  Martijn van Beers  <martijn@earthling.net>

        * gnome-gconf.[ch]: added get/set functions for GtkSpinButton

2000-01-11  Jonathan Blandford  <jrb@redhat.com>

	* gnome-gconf.h: added more functions.

2000-01-11  Iain Holmes  <ih@csd.abdn.ac.uk>

	* gnome-about.c: (gnome_about_item_cb): Changed the cursors to use the
	gnome-cursor stuff, and to return to the default cursor instead of
	the GDK_LEFT_PTR when you leave the url.

2000-01-10  Jonathan Blandford  <jrb@redhat.com>

	* gnome-gconf.[ch]: New module.  Lets you
	convert GtkWidget <-> GConfValue.  Will be useful in a number of
	places.

2000-01-10  ERDI Gergo  <cactus@cactus.rulez.org>

	* gnome-about.c (gnome_about_fill_info): The fonts defined by the
	current GTK+ style are now honored

2000-01-10  Havoc Pennington  <hp@redhat.com>

	* gnome-about.c (gnome_about_construct): push visual/cmap when
	creating the canvas so we can render gdkpixbuf to it reliably

2000-01-10  ERDI Gergo  <cactus@cactus.rulez.org>

	* gnome-about.[ch] : Complete rewrite using the GnomeCanvas, a new
	constructor (gnome_about_new_url) allows the easy inclusion of
	URLs for both the project and individual authors.
